--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,18 @@
  2015/09/04 MicroTESK 2.3 beta
 --------------------------------------------------------------------------------
 
+2016/02/12 MicroTESK 2.3.22 beta
+
+ The new build contains the following changes:
+ 
+ - Test Templates: support for assigning default test situations to
+   instructions and instruction groups
+ - Test Templates: support for preparator overriding
+ - Test Templates: new instruction permulation methods
+   (permutator and obfuscator engines)
+ - Test Templates: data is now printed in the end of a test program
+ - Several bug fixes and general improvements
+
 2016/02/05 MicroTESK 2.3.21 beta
 
  The new build contains the following changes:
