--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,12 @@
  2015/09/04 MicroTESK 2.3 beta
 --------------------------------------------------------------------------------
 
+2016/02/20 MicroTESK 2.3.23 beta
+
+ The new build contains the following changes:
+
+- Several bug fixes and general improvements
+
 2016/02/12 MicroTESK 2.3.22 beta
 
  The new build contains the following changes:
