--- a/xdocs/microtesk/microtesk_user_guide.tex
+++ b/xdocs/microtesk/microtesk_user_guide.tex
@@ -34,6 +34,10 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\usepackage{hyperref}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \begin{document}
 
 \begin{titlepage}
@@ -82,12 +86,12 @@ can work on the corresponding operating system.
 To install MicroTESK, the following steps should be performed:
 
 \begin{enumerate}
-  \item Download from http://forge.ispras.ru/projects/microtesk/files and unpack
+  \item Download from \url{http://forge.ispras.ru/projects/microtesk/files} and unpack
         the MicroTESK installation package (the .tar.gz file, latest release) to your
         computer. The folder to which it was unpacked will be further referred to as
         the installation directory (<installation dir>).
 
-  \item Declare the MICROTESK{\_}HOME environment variable and set its value to the path to
+  \item Declare the \textbf{MICROTESK{\_}HOME} environment variable and set its value to the path to
         the installation directory (see the Setting Environment Variables section).
 
   \item Set the <installation dir>/bin folder as the working directory (add the path to
