--- a/xdocs/microtesk/microtesk_user_guide.tex
+++ b/xdocs/microtesk/microtesk_user_guide.tex
@@ -247,7 +247,7 @@ Here is the list of options:
 
 \section{Introduction}
 
-MicroTESK generates test programs on the basis of test templates that provide
+MicroTESK generates test programs on the basis of \textbf{\textit{test templates} that provide
 an abstract description of scenarios to be reproduced by the generated programs.
 Test templates are created using the test template description language. It is
 a Ruby-based domain-specific language that provides facilities to describe test
