--- a/xdocs/microtesk/microtesk_user_guide.tex
+++ b/xdocs/microtesk/microtesk_user_guide.tex
@@ -1,5 +1,5 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\documentclass[oneside,final,14pt]{extreport}
+\documentclass[oneside,final,12pt]{extreport}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \usepackage[utf8]{inputenc}
@@ -102,68 +102,122 @@ To install MicroTESK, the following steps should be performed:
 
 \begin{enumerate}
   \item Download from \url{http://forge.ispras.ru/projects/microtesk/files} and unpack
-        the MicroTESK installation package (the .tar.gz file, latest release) to your
+        the MicroTESK installation package (the \texttt{.tar.gz} file, latest release) to your
         computer. The folder to which it was unpacked will be further referred to as
-        the installation directory (<installation dir>).
+        the installation directory (\texttt{<installation dir>}).
 
-  \item Declare the \textbf{MICROTESK{\_}HOME} environment variable and set its value to the path to
-        the installation directory (see the Setting Environment Variables section).
+  \item Declare the \texttt{MICROTESK{\_}HOME} environment variable and set its value to the path to
+        the installation directory (see the \hyperref[Setting_Environment_Variables]
+        {Setting Environment Variables} section).
 
-  \item Set the <installation dir>/bin folder as the working directory (add the path to
-        the PATH environment variable) to be able to run MicroTESK utilities from any path.
+  \item Set the \texttt{<installation dir>/bin} folder as the working directory (add the path to
+        the \texttt{PATH} environment variable) to be able to run MicroTESK utilities from any path.
 
   \item Note: Required for constraint-based generation. Download and install constraint
-        solver tools to the <installation dir>/tools directory (see the Installing
-        Constraint Solvers section).
+        solver tools to the \texttt{<installation dir>/tools} directory (see the
+        \hyperref[Installing_Constraint_Solvers]{Installing Constraint Solvers} section).
 \end{enumerate}
 
-% Now you can run the @compile.sh@ (or @.bat@) script to create a microprocessor
-% model and the @generate.sh@ (or @.bat@) script to generate test for this model.
-
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Setting Environment Variables}
+\label{Setting_Environment_Variables}
 
 \paragraph{Windows}
 
 \begin{enumerate}
-  \item Open the "System Properties" window.
-  \item Switch to the "Advanced" tab.
-  \item Click on Environment Variables.
-  \item Click "New.." under "System Variables".
-  \item In the "New System Variable" dialog specify variable name as
-        MICROTESK{\_}HOME and variable value as <installation dir>.
-  \item Click "OK" on all open windows.
+  \item Open the \texttt{System Properties} window.
+  \item Switch to the \texttt{Advanced} tab.
+  \item Click on \texttt{Environment Variables}.
+  \item Click \texttt{New..} under \texttt{System Variables}.
+  \item In the \texttt{New System Variable} dialog, specify variable name as
+        \texttt{MICROTESK{\_}HOME} and variable value as \texttt{<installation dir>}.
+  \item Click \texttt{OK} on all open windows.
   \item Reopen the command prompt window.
 \end{enumerate}
 
-\paragraph{Linux and OS X}
+\paragraph{Linux and OS X} ~\\
 
-Add the command below to the ~.bash{\_}profile file (Linux) or the ~/.profile
-file (OS X):
+Add the command below to the \texttt{\textasciitilde{}.bash{\_}profile} file
+(\textbf{\textit{Linux}}) or the \texttt{\textasciitilde{}/.profile} file (\textbf{\textit{OS X}}):
 
 \begin{lstlisting}[language=bash]
 export MICROTESK_HOME=<installation dir>
 \end{lstlisting}
 
-To start editing the file, type vi ~/.bash{\_}profile (or vi ~/.profile). Changes
-will be applied after restarting the command-line terminal or reboot. You can also
-execute the command in your command-line terminal to make temporary changes.
+To start editing the file, type \texttt{vi \textasciitilde{}/.bash{\_}profile}
+(or \texttt{vi \textasciitilde{}/.profile}).
+Changes will be applied after restarting the command-line terminal or reboot. You can also
+run the command in your command-line terminal to make temporary changes.
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \subsection{Installing Constraint Solvers}
+\label{Installing_Constraint_Solvers}
+
+To generate test data based on constraints, MicroTESK requires external constraint solvers.
+The current version supports the \href{https://github.com/z3prover}{Z3} and
+\href{http://cvc4.cs.nyu.edu}{CVC4} constraint solvers. Constraint executables should be
+downloaded and placed to the \texttt{<installation dir>/tools} directory.
+
+\paragraph{Installing Z3}
+
+\begin{itemize}
+\item \textbf{\textit{Windows}} users should download Z3 (32 or 64-bit version) from the following page:
+      \url{http://z3.codeplex.com/releases} and unpack the archive to the
+      \texttt{<installation dir>/tools/z3/windows} directory. Note: the executable file path
+      is \texttt{<windows>/z3/bin/z3.exe}.
+
+\item \textbf{\textit{UNIX}} and \textbf{\textit{Linux}} users should use one of the links below
+      and and unpack the archive to the \texttt{<installation dir>/tools/z3/unix} directory.
+      Note: the executable file path is \texttt{<unix>/z3/bin/z3}.
+
+      \begin{tabular} {| l | r |} \hline
+      Debian  x64 & \url{http://z3.codeplex.com/releases/view/101916} \\ \hline
+      Ubuntu  x86 & \url{http://z3.codeplex.com/releases/view/101913} \\ \hline
+      Ubuntu  x64 & \url{http://z3.codeplex.com/releases/view/101911} \\ \hline
+      FreeBSD x64 & \url{http://z3.codeplex.com/releases/view/101907} \\ \hline
+      \end{tabular}
+
+\item \textbf{\textit{OS X}} users should download Z3 from
+      \url{http://z3.codeplex.com/releases/view/101918} and unpack the archive to the
+      \texttt{<installation dir>/z3/osx} directory. Note: the executable file path is
+      \texttt{<osx>/z3/bin/z3}.
+
+\end{itemize}
+
+\paragraph{Installing CVC4}
+
+\begin{itemize}
+\item \textbf{\textit{Windows}} users should download the latest version of CVC4 binary from
+      \url{http://cvc4.cs.nyu.edu/builds/win32-opt/} and save it to the
+      \texttt{<installation dir>/tools/cvc4/windows} directory as \texttt{cvc4.exe}.
+
+\item \textbf{\textit{Linux}} users download the latest version of CVC4 binary from
+      \url{http://cvc4.cs.nyu.edu/builds/i386-linux-opt/unstable/} (32-bit version) or
+      \url{http://cvc4.cs.nyu.edu/builds/x86_64-linux-opt/unstable/} (64-bit version) and
+      save it to the \texttt{<installation dir>/tools/cvc4/unix} directory as \texttt{cvc4}.
+
+\item \textbf{\textit{OS X}} users should download the latest version of CVC4 distribution
+      package from \url{http://cvc4.cs.nyu.edu/builds/macos/} and install it.
+      The CVC4 binary should be copied to \texttt{<installation dir>/tools/cvc4/osx} as
+      \texttt{cvc4} or linked to this file name via a symbolic link.
+
+\end{itemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Installation Directory Structure}
 
-The MicroTESK installation directory contains the following subdirectories:
+The MicroTESK installation directory contains the following subdirectories: \\
 
-\begin{tabular}{ | l | p{12.5cm} |}
+\begin{tabular}{ | l | l |}
   \hline
   \textbf{arch} & Microprocessor specifications and test templates \\ \hline
   \textbf{bin}  & Scripts to run modeling and test generation tasks \\ \hline
   \textbf{doc}  & Documentation \\ \hline
   \textbf{etc}  & Configuration files \\ \hline
   \textbf{gen}  & Generated code of microprocessor models \\ \hline
-  \textbf{lib}  & JAR files and Ruby scripts to perform modeling and test generation 
-                  tasks \\ \hline
+  \textbf{lib}  & JAR files and Ruby scripts to perform modeling and \\
+  ~             & test generation tasks \\ \hline
   \textbf{src}  & Source code of MicroTESK \\ \hline
 \end{tabular}
 
@@ -171,8 +225,8 @@ The MicroTESK installation directory contains the following subdirectories:
 \section{Running}
 
 To generate a Java model of a microprocessor from its nML specification, a user
-needs to run the compile.sh script (Unix, Linux, OS X) or the compile.bat script
-(Windows). For example, the following command generates a model for the miniMIPS
+needs to run the \texttt{compile.sh} script (Unix, Linux, OS X) or the \texttt{compile.bat}
+script (Windows). For example, the following command generates a model for the miniMIPS
 specification:
 
 \begin{lstlisting}[language=bash]
@@ -183,49 +237,50 @@ NOTE: Models for all demo specifications are already built and included in the
 MicroTESK distribution package. So a user can start working with MicroTESK from
 generating test programs for these models.
 
-To generate a test program, a user needs to use the generate.sh script
-(Unix, Linux, OS X) or the generate.bat script (Windows). The scripts
+To generate a test program, a user needs to use the \texttt{generate.sh} script
+(Unix, Linux, OS X) or the \texttt{generate.bat} script (Windows). The scripts
 require the following parameters:
 
-\begin{enumerate}
-  \item model name
-  \item test template file
-  \item target test program source code file
-\end{enumerate}
+\begin{itemize}
+\item model name;
+\item test template file;
+\item target test program source code file.
+\end{itemize}
 
-For example, the command below runs the euclid.rb test template for
+For example, the command below runs the \texttt{euclid.rb} test template for
 the miniMIPS model generated by the command from the previous example and saves
 the generated test program to an assembler file. The file name is based on values
-of the --code-file-prefix and --code-file-extension options.
+of the \texttt{--code-file-prefix} and \texttt{--code-file-extension} options.
 
 \begin{lstlisting}[language=bash]
 sh bin/generate.sh minimips arch/minimips/templates/euclid.rb
 \end{lstlisting}
 
 To specify whether Z3 or CVC4 should be used to solve constraints,
-a user needs to specify the -s or --solver command-line option as z3
-or cvc4 respectively. By default, Z3 will be used. Here is an example:
+a user needs to specify the \texttt{-s} or \texttt{--solver} command-line option as \texttt{z3}
+or \texttt{cvc4} respectively. By default, Z3 will be used. Here is an example:
 
 \begin{lstlisting}[language=bash]
 sh bin/generate.sh -s cvc4 minimips arch/minimips/templates/constraint.rb
 \end{lstlisting}
 
-More information on command-line options can be found on the Command-Line Options
-section.
+More information on command-line options can be found on the
+\hyperref[Command_Line_Options]{Command-Line Options} section.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Command-Line Options}
+\label{Command_Line_Options}
 
-MicroTESK works in two modes: specification translation and test generation,
-which are enabled with the --translate (used by default) and --generate keys
-correspondingly. In addition, the --help key prints information on the command-line format.
+MicroTESK works in two modes: \emph{specification translation} and \emph{test generation},
+which are enabled with the \texttt{--translate} (used by default) and \texttt{--generate} keys
+correspondingly. In addition, the \texttt{--help} key prints information on the command-line format.
 
-The --translate and --generate keys are inserted into the command-line by
-compile.sh/compile.bat and generate.sh/generate.bat scripts correspondingly.
-Other options should be specified explicitly to customize the behavior of MicroTESK.
-Here is the list of options:
+The \texttt{--translate} and \texttt{--generate} keys are inserted into the command-line by
+\texttt{compile.sh}/\texttt{compile.bat} and \texttt{generate.sh}/\texttt{generate.bat} scripts
+correspondingly. Other options should be specified explicitly to customize the behavior of MicroTESK.
+Here is the list of options:\\
 
-\begin{tabular}{ | p{4cm} | p{1cm} | p{5cm} | p{3cm} |}
+\begin{tabular}{ | p{4cm} | p{1cm} | p{5cm} | p{2.5cm} |}
   \hline
   Full name & Short name & Description & Requires \\ \hline
   --help & -h & Shows help message & \\ \hline
@@ -237,9 +292,13 @@ Here is the list of options:
   --extension-dir <arg> & -ed & Sets directory that stores user-defined Java code & --translate \\ \hline
   --random-seed <arg> & -rs & Sets seed for randomizer & --generate \\ \hline
   --solver <arg> & -s & Sets constraint solver engine to be used & --generate \\ \hline
+\end{tabular}
+
+\begin{tabular}{ | p{4cm} | p{1cm} | p{5cm} | p{2.5cm} |}
+  \hline
   --branch-exec-limit <arg> & -bel & Sets the limit on control transfers to detect endless loops & --generate \\ \hline
   --solver-debug & -sd & Enables debug mode for SMT solvers & --generate \\ \hline
-  --tarmac-log  & -tl & Saves simulator log in Tarmac format & --generate \\ \hline
+  --tarmac-log & -tl & Saves simulator log in Tarmac format & --generate \\ \hline
   --self-checks & -sc & Inserts self-checking code into test programs & --generate \\ \hline
   --arch-dirs <arg> & -ad & Home directories for tested architectures & --generate \\ \hline
   --rate-limit <arg> & -rl & Generation rate limit, causes error when broken & --generate \\ \hline
@@ -249,7 +308,7 @@ Here is the list of options:
   --data-file-prefix <arg> & -dfp & The data file prefix & --generate \\ \hline
   --exception-file-prefix <arg> & -efp & The exception handler file prefix & --generate \\ \hline
   --program-length-limit <arg> & -pll & The maximum number of instructions in output programs & --generate \\ \hline
-  --trace-length-limit <arg> make& -tll & The maximum length of execution traces of output programs & --generate \\ \hline
+  --trace-length-limit <arg> & -tll & The maximum length of execution traces of output programs & --generate \\ \hline
   --comments-enabled & -ce & Enables printing comments; if not specified no comments are printed & --generate \\ \hline
   --comments-debug & -cd & Enables printing detailed comments; must be used together with --comments-enabled  & --generate \\ \hline
 \end{tabular}
@@ -455,12 +514,14 @@ end
 
 \section{Data Definitions}
 
-Describing data requires the use of assembler-specific directives. Information on
+\subsection{Configuration}
+
+Defining data requires the use of assembler-specific directives. Information on
 these directives is not included in ISA specifications and should be provided in test
 templates. It includes textual format of data directives and mappings between nML and
 assembler data types used by these directives. Configuration information on data
 directives is specified in the \texttt{data{\_}config} block, which is usually placed
-in the \texttt{pre} method. Only one such block per a template is allowed.
+in the \texttt{pre} method. Only one such block per a test template is allowed.
 Here is an example:
 
 \begin{lstlisting}[language=ruby]
@@ -515,7 +576,9 @@ The above example defines the directives \texttt{byte}, \texttt{half}, \texttt{w
 that place data in the memory array \texttt{M} (specified in nML using the \texttt{mem} keyword).
 The size of an addressable memory location is 1 byte.
 
-After all data directives are configured, data can be defined using the \texttt{data} block,
+\subsection{Definitions}
+
+After all data directives are configured, data can be defined using the \texttt{data} construct,
 which has two optional parameters:
 
 \begin{itemize}
@@ -524,6 +587,8 @@ which has two optional parameters:
 \item \texttt{separate{\_}file} - a boolean value that states that the generated data
       definitions should be placed in a separate source code file.
 \end{itemize}
+
+
 
 \begin{lstlisting}[language=ruby]
 data {
