Working on documentation.

--- a/xdocs/microtesk/microtesk_user_guide.tex
+++ b/xdocs/microtesk/microtesk_user_guide.tex
@@ -242,9 +242,9 @@ To generate a test program, a user needs to use the \texttt{generate.sh} script
 require the following parameters:
 
 \begin{itemize}
-\item model name;
-\item test template file;
-\item target test program source code file.
+\item \texttt{model name};
+\item \texttt{test template file};
+\item \texttt{target test program source code file}.
 \end{itemize}
 
 For example, the command below runs the \texttt{euclid.rb} test template for
