--- a/xdocs/microtesk/microtesk_user_guide.tex
+++ b/xdocs/microtesk/microtesk_user_guide.tex
@@ -326,6 +326,27 @@ Here is the list of options:\\
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Settings File}
 
+\begin{lstlisting}[language=ruby]
+<?xml version="1.0" encoding="utf-8"?>
+<settings>
+  <setting name="random-seed" value="0"/>
+  <setting name="branch-exec-limit" value="1000"/>
+  <setting name="code-file-extension" value="asm"/>
+  <setting name="code-file-prefix" value="test"/>
+  <setting name="data-file-extension" value="dat"/>
+  <setting name="data-file-prefix" value="test"/>
+  <setting name="exception-file-prefix" value="test_except"/>
+  <setting name="program-length-limit" value="1000"/>
+  <setting name="trace-length-limit" value="1000"/>
+  <setting name="comments-enabled" value=""/>
+  <setting name="comments-debug" value=""/>
+  <setting
+    name="arch-dirs" 
+    value="cpu=arch/demo/cpu/settings.xml:vliw=arch/demo/vliw/settings.xml:minimips=arch/minimips/settings.xml:arm=arch/arm/settings.xml"
+  />
+</settings>
+\begin{end}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \chapter{Test Templates}
